--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+frr (10.4.3-0) unstable; urgency=medium
+
+  * New upstream release FRR 10.4.3
+
+ -- Jafar Al-Gharaibeh <jafar@atcorp.com>  Tue, 17 Feb 2026 22:00:00 -0600
+
 frr (10.4.2-0) unstable; urgency=medium
 
   * New upstream release FRR 10.4.2
